# cloudy

./: .gitignore  CMakeLists.txt  LICENSE  README.md  dashboard.html
src/: CMakeLists.txt  cloudy-config.cmake
src/cloudy/: CMakeLists.txt  admin_server.hpp  direct_stream.hpp  global.hpp  storage_server.hpp  worker.hpp
src/cloudyd/: CMakeLists.txt  main.cpp
src/libcloudyserver/: CMakeLists.txt  admin_http.hpp  admin_model.hpp  admin_model.idl  admin_server.cpp  admin_server.hpp  common.cpp  common.hpp  direct_stream.cpp  direct_stream.hpp  global.hpp  internal_model.hpp  internal_model.idl  libavwrapper.cpp  libavwrapper.hpp  library.cpp  library.hpp  storage.cpp  storage.hpp  storage_http.hpp  storage_model.hpp  storage_model.idl  storage_server.cpp  storage_server.hpp  worker.cpp  worker.hpp
